--- a/first2.html
+++ b/first2.html
@@ -7,12 +7,54 @@
 <body>
     <h1>NEW SQUAD OF FC BARCELONA</h1>
     <p>1.messi 2.inesta 3.xavi <br/> 4.pique 5.ter stregen </p> 
-    <img src="https://th.bing.com/th/id/OIP.WGceAdkozexuAHjOoHoP5QHaEL?w=320&h=180&c=7&r=0&o=5&pid=1.7" width="200px" height="200px" alt="lionel messi"/>
+    <img src="https://th.bing.com/th/id/OIP.WGceAdkozexuAHjOoHoP5QHaEL?w=320&h=180&c=7&r=0&o=5&pid=1.7" width="2000px" height="1400px" alt="lionel messi"/>
      <a href="https://www.ea.com/games/cricket">EA sports</a>
     <h2>MEW COACH OF FC BARCELONA</h2>
     <P>pep gardiwala</P> 
-<img src="https://images.hindustantimes.com/img/2021/08/26/550x309/2021-08-23T032548Z_1_LYNXMPEH7M03M_RTROPTP_3_SOCCER-ENGLAND-TOT-MCI-REPORT_1629943431405_1629943438223.JPG" width="200px" height="200px" alt="pep gardiwala"/>
+<img src="https://images.hindustantimes.com/img/2021/08/26/550x309/2021-08-23T032548Z_1_LYNXMPEH7M03M_RTROPTP_3_SOCCER-ENGLAND-TOT-MCI-REPORT_1629943431405_1629943438223.JPG" width="2000px" height="1400px" alt="pep gardiwala"/>
 <a href="https://www.konami.com/wepes/mobile/en/page/announcements_account"> Konami </a>
-    
+    <hr/>
+    <p> <i>lionel messi is the best </i>player<en>in the world</en></p>
+    <pre><i><b>sakib al hasan is the
+         best player
+          of the
+           world</b></i></pre>
+       <a href="https://www.cricbuzz.com/profiles/544/shakib-al-hasan" >sakibs browser</a>   
+       <header> 
+         <nav>sakib,liton,mushfiq,riad </nav>  
+       </header>
+<aside>domingo,hature singh</aside>
+<main> 
+    <section>
+        <h1>THIS IS MAHMUDULLAH RIAD</h1>
+        <img src="https://images.news18.com/ibnlive/uploads/2020/11/1604818741_mahmudullah-102-vs-nz.jpg?im=FitAndFill,width=1200,height=1200" alt="riads pic" width="2000px" height="1400px"/>
+        <p>riad played well in icc champions trophy</p>
+    </section>
+    <section> 
+        <h1>THIS IS MUSTAFIZUR</h1>
+        <img src="https://p.imgci.com/db/PICTURES/CMS/319700/319734.square.png" alt="mustas pic" width="2000px" height="1500px"/>
+        <p>Mustafizur was the top wicket taker in the last world cup</p>
+    </section>
+
+</main>
+<button><a href="https://github.com/">Tap here </a></button>
+<mark>ashik</mark>
+<p><strong>He is out</strong>  H<sub>2</sub>o <br>  E=mc<sup>2</sup></p>
+<ol>
+    <li>sakib</li>
+    <li> tamim</li>
+    <li>mushfiq</li>
+    <li>RIAD</li>
+    <li>mashrafee</li>
+</ol>
+<ul>
+    <li>saif</li>
+    <li>shadman</li>
+    <li>joy</li>
+    <li>hridoy</li>
+    <li>afif</li>
+
+    <footer><h3>THIS IS <mark>BANGLADESH</mark></h3></footer>
+</ul>
 </body>
 </html>
